--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,7 @@
 @use "./projects.scss";
 @use "./pagesstrings.scss";
 @use "./hero.scss";
+@use "./about.scss";
+@use "./home.scss";
+@use "./elastic-menu.scss";
+@use "./morph-text.scss";
