--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -11,3 +11,14 @@
     transform-origin: center;
   }
 }
+
+.nav-item {
+  width: 120px;
+}
+
+nav {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
