--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -2,6 +2,7 @@
   width: 100%;
   background: #c5c5c5;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   /* REMOVE vertical centering */
   align-items: flex-start;
