--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -6,11 +6,12 @@
   height: 100vh; /* lock to viewport on desktop */
   display: flex;
   flex-direction: row;
-  background: #c5c5c5;
+  background: #c5c5c5cf;
   color: #3f3d3c;
   position: relative;
   overflow: hidden; /* kill weird scroll on desktop */
   font-family: "Instrument Serif", serif;
+  z-index: 1;
 }
 
 /* LEFT COLUMN */
@@ -101,7 +102,7 @@
 
   .squishy-frame {
     width: 100%;
-    height: 800px; /* ✅ iframe fills the tall area */
+    height: 1000px; /* ✅ iframe fills the tall area */
   }
 }
 
