--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -194,6 +194,7 @@ canvas {
 
 .desktop-social-icons a {
   color: #7b7979; /* dark grey */
+  color: #a5a5a5;
   text-decoration: none;
   transition: opacity 0.25s ease;
 }
@@ -223,6 +224,7 @@ canvas {
 
 .mobile-social-icons a {
   color: #7b7979; /* same dark grey as desktop version */
+  color: #a5a5a5;
   text-decoration: none;
   transition: opacity 0.25s ease;
 }
