--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -16,6 +16,7 @@
   line-height: 1.4;
   color: #333;
   color: #4f4b4b;
+  color: #868585;
   box-sizing: border-box;
 
   /* Add your padding here */
@@ -33,6 +34,7 @@
 
   .about-blurb {
     font-size: 22px;
+    padding: 30px;
   }
 }
 
