--- a/src/styles/elastic-menu.scss
+++ b/src/styles/elastic-menu.scss
@@ -3,10 +3,13 @@
   margin: 0;
   border: none;
   background: transparent;
-  cursor: pointer;
+
   width: 100%;
   height: 100%;
   display: block;
+  outline: none; /* Removes the focus outline */
+  -webkit-tap-highlight-color: transparent; /* Removes the tap highlight on mobile WebKit browsers (iOS/some Android) */
+  /* --- END FIX --- */
 }
 
 /* base line styling */
@@ -77,12 +80,14 @@
 .slideout-menu ul {
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   text-align: center;
+  width: max-content;
 }
 
 .slideout-menu li + li {
   margin-top: 18px;
+  text-align: center;
 }
 
 .slideout-menu a {
