added work page

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -17,6 +17,7 @@
   color: #333;
   color: #4f4b4b;
   color: #868585;
+  color: #888888;
   box-sizing: border-box;
 
   /* Add your padding here */
