--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -33,10 +33,10 @@ body {
 .menu-wrapper {
   position: absolute;
   top: 30px;
-
-  width: 105px;
-  height: 50px;
   z-index: 2000;
+  width: 55px;
+  height: 100px;
+  left: 40px;
 }
 
 .intro-text {
@@ -93,7 +93,7 @@ body {
 
   .menu-wrapper {
     top: 0;
-    left: 0;
+    left: 25px;
     margin-bottom: 20px;
   }
 
