--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,3 +7,7 @@
 @use "./home.scss";
 @use "./elastic-menu.scss";
 @use "./morph-text.scss";
+@use "./smear.scss";
+@use "./templates.scss";
+@use "./ikat.scss";
+@use "./loading-blobs.scss";
