--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   /* REMOVE vertical centering */
   align-items: flex-start;
+  padding: 60px;
 }
 
 /* RIGHT: BLURB */
@@ -21,11 +22,20 @@
   box-sizing: border-box;
 
   /* Add your padding here */
-  padding: 60px;
 }
 
 /* ------ MOBILE STACK ------ */
 @media (max-width: 900px) {
+  .about-section {
+    background: #c5c5c5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* REMOVE vertical centering */
+    align-items: flex-start;
+    padding: 10px;
+    padding: 30px;
+  }
   .about-inner {
     flex-direction: column;
     align-items: center; /* center both on mobile */
@@ -34,8 +44,8 @@
   }
 
   .about-blurb {
-    font-size: 22px;
-    padding: 30px;
+    font-size: 18px;
+    text-align: left;
   }
 }
 
@@ -48,21 +58,14 @@
   margin-bottom: 10px;
 }
 
-/* Text layers */
-.abouttext-span {
-  position: absolute;
-  width: 100%;
-  text-align: left; /* ← TITLE STAYS LEFT */
-  font-family: "Raleway", sans-serif;
-  font-size: 56px;
-  line-height: 1;
-  color: #f7e9a9;
-  user-select: none;
-}
-
 @media (max-width: 900px) {
   .abouttext-span {
     text-align: center; /* center on mobile */
+  }
+
+  .about-title {
+    width: 100%;
+    height: 100px;
   }
 }
 
@@ -72,4 +75,31 @@
   width: 0;
   height: 0;
   pointer-events: none;
+}
+
+.inline-iframe {
+  border: none;
+  vertical-align: middle;
+  pointer-events: none; /* prevents scroll jank */
+}
+
+.about-title {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.about-i-frame {
+  width: 530px;
+  border: none;
+  outline: none;
+  height: 180px;
+}
+
+.wavy-role {
+  display: inline-block; /* helps the filter feel more contained */
+  filter: url(#filter);
+  font-weight: 500;
 }
