--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -86,9 +86,11 @@
 .about-title {
   width: 100%;
   height: 200px;
+
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
+  text-align: center;
 }
 
 .about-i-frame {
@@ -96,6 +98,10 @@
   border: none;
   outline: none;
   height: 180px;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 .wavy-role {
