--- a/src/styles/templates.scss
+++ b/src/styles/templates.scss
@@ -16,7 +16,7 @@
 .template-i-frame {
   border: none;
   outline: none;
-  width: 100vw;
+  width: 100%;
 }
 
 @media (max-width: 700px) {
@@ -24,5 +24,6 @@
     height: 140px; /* smaller height */
 
     margin-top: -40px; /* optional: fix spacing caused by scale */
+    margin-left: 4px;
   }
 }
